// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Feedback/MLProgress Circle 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default ml-progress"
>
  <div
    class="ant-progress-inner"
    style="width:120px;height:120px;font-size:24px"
  >
    <svg
      class="ant-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke:#f3f3f3;stroke-dasharray:295.3097094374406px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,-47
   a 47,47 0 1 1 0,94
   a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke:inherit;stroke-dasharray:147.6548547187203px 295.3097094374406px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Storyshots Feedback/MLProgress Dashboard 1`] = `
<div
  class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default ml-progress"
>
  <div
    class="ant-progress-inner"
    style="width:120px;height:120px;font-size:24px"
  >
    <svg
      class="ant-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="ant-progress-circle-trail"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke:#f3f3f3;stroke-dasharray:220.30970943744057px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
      <path
        class="ant-progress-circle-path"
        d="M 50,50 m 0,47
   a 47,47 0 1 1 0,-94
   a 47,47 0 1 1 0,94"
        fill-opacity="0"
        opacity="1"
        stroke=""
        stroke-linecap="round"
        stroke-width="6"
        style="stroke:inherit;stroke-dasharray:110.15485471872029px 295.3097094374406px;stroke-dashoffset:-37.5px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s"
      />
    </svg>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Storyshots Feedback/MLProgress Line 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default ml-progress"
  style="width:100%"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width:50%;height:8px;border-radius:"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;
